loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: '(' expected but identifier found.
while (!sortieTrouvee) {for x<- 1 to 5 {var y=0;avance();if (estSurBiscuit) {y=y+1};gauche()};if (y<3) {droite()}; else {gauche()}}
                            ^Poucet1:1: error: illegal start of simple expression
while (!sortieTrouvee) {for x<- 1 to 5 {var y=0;avance();if (estSurBiscuit) {y=y+1};gauche()};if (y<3) {droite()}; else {gauche()}}
                                                                                             ^